<resources>
    <string name="app_name">UNIty</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="subtitle">Welcome Back! You\'ve been missed</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">New to UNIty? Register here.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_email">Send Email</string>
    <string name="explore">Explore</string>
    <string name="suggested">Suggested</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
</resources>